[package]
name = "oboromi-core"
version = "0.0.1"
edition = "2024"
authors = ["Nikilite", "Elizabeth"]
license = "GPL-3.0"
description = "Core emulator library for oboromi"

[lib]
path = "src/lib.rs"

[dependencies]
unicorn-engine = "2.1.1"

[features]
default = []
trace = []
debug-asserts = []
jupyter = []
